syntax = "proto3";

package l8services;

option java_multiple_files = true;
option java_outer_classname = "L8Services";
option java_package = "com.types.l8service";
option go_package = "./types/l8services";

message L8Services {
  map<string, L8ServiceAreas> service_to_areas = 1;
}

message L8ServiceAreas {
  map<sint32, bool> areas = 1;
}

message L8ReplicationIndex {
  string service_name = 1;
  sint32 service_area = 2;
  map<string, L8ReplicationKey> keys = 3;
  map<string, L8ReplicationEndPoint> end_points = 4;
}

message L8ReplicationKey {
  map<string, int64> location = 1;
}

message L8ReplicationEndPoint {
  int64 score = 1;
}

message L8Transaction {
  int32 State = 1;
  string id = 2;
  string err_msg = 3;
  int64 start_time = 4;
}